Filtradas las Distancias (III)

--- a/minitarea2.ipynb
+++ b/minitarea2.ipynb
@@ -207,19 +207,32 @@
       "metadata": {
         "id": "J-y_D5mMv9KV",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "51f71e3c-ce91-4a5a-de6a-1b873b6d5ee4"
       },
       "cell_type": "code",
       "source": [
         "#Filtrar por distancia\n",
+        "dat = datos.copy()\n",
+        "dat2 = dat[dat[:,0]>1]\n",
+        "datos_filtrados = dat2[dat2[:,1]>1]\n",
         "\n",
-        "datos_filtrados = \n",
         "\n",
-        "\n",
-        "print()"
+        "print('El set original contenia ' + str(np.size(bB)) +  ' estrellas, luego de filtrar quedaron ' + str(np.size(datos_filtrados[:,0])))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "El set original contenia 5298 estrellas, luego de filtrar quedaron 4707\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
