Agregada la Función "mag_abs" (IV)

--- a/minitarea2.ipynb
+++ b/minitarea2.ipynb
@@ -75,7 +75,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c00c9a1e-4111-4ebc-fd6e-ae2609919fe0"
+        "outputId": "60d82fd9-ec1a-4336-eb53-0eb7c9632261"
       },
       "cell_type": "code",
       "source": [
@@ -97,9 +97,9 @@
         "bI = datos[:,3]\n",
         "T = datos[:,4]\n",
         "M = datos[:,5]\n",
-        "D = datos[:,6]"
+        "D = datos[:,6]\n"
       ],
-      "execution_count": 22,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,11 +262,15 @@
       "cell_type": "code",
       "source": [
         "#Funcion mag_abs(mag, dist)\n",
+        "from math import *\n",
         "\n",
         "def mag_abs(mag_ap, dist):\n",
+        "  mag = np.array([])\n",
+        "  for i in np.arrange(0,np.size(mag_ap),1):\n",
+        "    M = mag_ap[i] - (5*log10(dist[i])) + 5\n",
+        "    np.append(mag,M)\n",
         "    \n",
-        "    \n",
-        "    return "
+        "    return mag"
       ],
       "execution_count": 0,
       "outputs": []
