Agregados Comentarios a cada Parte

--- a/minitarea2.ipynb
+++ b/minitarea2.ipynb
@@ -99,7 +99,7 @@
         "M = datos[:,5]\n",
         "D = datos[:,6]\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,6 +108,23 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "_bTiFN6WY2HZ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# 1. Cargar datos (Comentarios)#\n",
+        " Bastante simple en realidad, era básicamente copiar y pegar de la clase 2, y aplicar algo de conocimiento sobre numpy, en especial como organizar los arrays\n",
+        " \n",
+        " \n",
+        " \n",
+        "\n",
+        "---\n",
+        "\n"
       ]
     },
     {
@@ -160,7 +177,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,6 +203,25 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YRYfdKFuZiJi",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# 2. Histogramas (Comentarios)#\n",
+        "Aca se pone complicada la cosa, acá eran dos histogramas:\n",
+        "\n",
+        "**I) Distancia :** Simple, sirve como introducción a como hacer los histogramas con esta herramienta, en especial considerando que parte de la info que se necesitaba para que quedara bonito no estaba a simple vista, el tema de los bins y el borde de las barras fueron los mayores problemas, pero nada que no fuese fácil de solucionar con una pequeña investigación en google\n",
+        "\n",
+        "**II) B y V: ** Traté de llegar y poner los datos a la fuerza, rezando a la virgencita para que quedara bien el grafico, no muy sorprendentemente, no fue asi, si bien aparecían todas las barras en el gráfico, unas estaban dertrás de otras, y las escalas de ambas eran distintas, asi que existia cierto \"desfase\" entre las barras. Para solucionar esto, decidí hacer lo de siempre, busqué ejemplos en Google y con eso logré separar las barras, además aprendí como colocar la leyenda para poder entender cual barra es cual.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ]
     },
     {
@@ -223,7 +259,7 @@
         "\n",
         "print('El set original contenia ' + str(np.size(bB)) +  ' estrellas, luego de filtrar quedaron ' + str(np.size(datos_filtrados[:,0])))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,6 +268,22 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "KLpTUGG_bjrr",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# 3. Filtrar datos (Comentarios)#\n",
+        "Chistosamente, en un principio hice esta parte **antes** de que dieran la info de que la parte 2 era con las distancias, asi que tras una hora rompiendome los sesos en el escritorio llegué a la conclusion de que lo más logico era que existía cierta relación entre la distancia y la magnitud aparente, asi que filtré a todas las estrellas cuyo brillo fuese menor a 1, en retrospectiva, no hay mucho que decir.\n",
+        "Esta parte es solo filtrar, saludos.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ]
     },
     {
@@ -275,6 +327,21 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "GCCYYnL9ceDB",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# 4. Función Magnitud Absoluta (Comentarios)#\n",
+        "Esta seccion fue bastante facil, solo habia que hacer un array, y elemento a elemento agregar la magnitud absoluta. Y si, la idea de la función es bastante simple, sin embargo, hay un pequeño detalle, en mi intento original, cometí el error de asumir que un array vacio era lo mismo que una lista vacia, **GRAN ERROR**, no fue hasta que tratando de ver porque en la parte 5 no me graficaba nada, me di cuenta que lo que me devolvía esta función era un array de 0 dimensiones, y la razón de ello era lo más logico, es decir, la manera en que usaba los array estaba errada; para solucionar el problema, simplemente hice que la función trabajara con listas, y en el paso final hiciera el array\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
     },
     {
       "metadata": {
@@ -325,7 +392,7 @@
         "ax.set_title('Diagrama Color Magnitud')\n",
         "ax.legend()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,6 +429,22 @@
     },
     {
       "metadata": {
+        "id": "HM6pOJKBeAN7",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# 5. CMD (Comentarios)#\n",
+        "Para el color, el problema fue el mismo que en la parte anterior, con la misma solución.\n",
+        "Para el gráfico, tomé inspiración de la Clase 2, hasta el punto que en gran parte fue copiar y pegar, sin embargo, puse atención a como se generaba la figura, que enrealidad es bastante simple, solo dar los datos, y ordenar los ejes.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
         "id": "dORwLIe_v9LB",
         "colab_type": "text"
       },
@@ -383,11 +466,11 @@
       "metadata": {
         "id": "AnV4mKFhv9LC",
         "colab_type": "code",
+        "outputId": "6309d584-54c0-47dd-c905-6ff62a97ba19",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 909
-        },
-        "outputId": "6309d584-54c0-47dd-c905-6ff62a97ba19"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -415,7 +498,7 @@
         "ax1[1].legend()\n",
         "c2.ax.set_ylabel('Temperatura', rotation=90)"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,11 +530,11 @@
       "metadata": {
         "id": "oADsOIyxv9LU",
         "colab_type": "code",
+        "outputId": "bf2ac1ff-e6b0-4c37-afb0-4993a10205c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 892
-        },
-        "outputId": "bf2ac1ff-e6b0-4c37-afb0-4993a10205c5"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -468,7 +551,7 @@
         "cb.ax.set_ylabel('Densidad de Estrellas', rotation=90)\n",
         "plt.show()\n"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -482,6 +565,26 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "o1tSq9Age4k6",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# 6. Densidades y otros (Comentarios)#\n",
+        "El grande.\n",
+        "Aunque sinceramente no tan complicado, puesto que solo había que expandir el gráfico que ya teníamos, para esto, de nuevo, la clase 2 fue de gran ayuda para entender como funcionaba la colorbar, con esto solo era cuestión de llegar y agregar los nuevos datos y \"plotear\". \n",
+        "\n",
+        "Lo mismo con el Histograma 2D, solo que en vez de la Clase 2, la info salía de Google.\n",
+        "\n",
+        "El unico detalle que me complicó fue darle una leyenda a la colorbar, pero con un poco de ayuda de mis camaradas, se pudo.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ]
     }
   ]
